--- a/WebContent/WEB-INF/layoutmenu.xhtml
+++ b/WebContent/WEB-INF/layoutmenu.xhtml
@@ -18,6 +18,9 @@
 				<p:submenu label="Planos de Ensino">
 					<p:menuitem value="Visualizar Planos de Ensinos" url="/visualizarPlanoEnsino.xhtml" icon="icon-user" />
 				</p:submenu>
+				<p:submenu label="Outros Serviços">
+					<p:menuitem value="Convertor de URL" url="/conv.xhtml" icon="icon-user" />
+				</p:submenu>
 				
 			</p:panelMenu>	
 		</h:form>
