--- a/WebContent/WEB-INF/layoutmenu.xhtml
+++ b/WebContent/WEB-INF/layoutmenu.xhtml
@@ -19,6 +19,10 @@
 					<p:menuitem value="Visualizar Planos de Ensinos" url="/visualizarPlanoEnsino.xhtml" icon="icon-user" />
 				</p:submenu>
 				
+				<p:submenu label="Outros Serviços">
+					<p:menuitem value="Convertor de URL" url="/conv.xhtml" icon="icon-user" />
+					<p:menuitem value="Consulta CEP" url="/cadastrarUsuario.xhtml" icon="icon-user" />
+				</p:submenu>
 			</p:panelMenu>	
 		</h:form>
 
